Fixed bugs in scatter plot and aligned colors of plots to the running theme

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -59,6 +59,7 @@ body {
   display: inline-block;
   color: #949494;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  box-shadow: 0px 5px 10px 0px grey;
 }
 #scatter-viz {
   position: relative;
@@ -252,7 +253,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: Georgia, Garamond, serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
   font-size: 14px;
   line-height: 1.3;
   color: #333;
@@ -335,10 +336,10 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
   font-weight: 600;
   line-height: 1.1;
-  color: inherit;
+  color: #B92B27;
 }
 h1 small,
 h2 small,
@@ -2911,7 +2912,7 @@ text {
   fill: #333;
 }
 svg {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
   font-size: 11px;
 }
 .full-width {
@@ -3027,7 +3028,7 @@ path.orange {
   color: #999;
 }
 .annotation {
-  font-family: Georgia, Garamond, serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
   font-size: 12px;
 }
 .bottom-border {
@@ -3178,7 +3179,7 @@ h3:hover a.anchor {
  * Styles for tables in the doc
  */
 .table {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
 }
 .table th {
   font-weight: normal;
@@ -3247,7 +3248,7 @@ h3:hover a.anchor {
   }
 }
 .header .container .title .authors {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;;
   color: #999999;
   font-weight: 200;
 }
